scss/_main.scss
/* ... */
.section__main-content {
  h3 {
    color: white;
  }

  p {
    color: white;
  }

  @media (max-width: 991px) {
    padding-bottom: 0;
  }

  .main-content__button {
    background: white;
    border: none;
    border-radius: 0;
    color: $color__primary;
    font-size: 13px;
    padding: 2px 10px;

    &:hover {
      background: $color__primary;
      color: white;
      transition: 0.2s ease-in-out;
    }
  }
}

.wrapper__third-col-img {
  @media (max-width: 1199px) {
    margin: 0 auto;
    padding: 0;
    width: 100%;
  }
}

.section__third-col-img {

  @media (max-width: 1199px) {
    padding: 0;
  }

  .container__third-col-img {
    height: 125vh;

    @media (max-width: 1199px) {
      height: 50vh;
    }
  }

  .img__third-col-img {
    background-image: url("https://mountainsoulyoga.com/wp-content/uploads/2016/04/20161205_MtnSoul_227.jpg?id=1241");

    background: {
      position: center;
      size: cover;
      repeat: no-repeat;
    }

    height: 100%;

    margin: {
      top: 10px;
      bottom: 10px;
    }

    @media (max-width: 1199px) {
      margin-bottom: 0;
    }

    @media (max-width: 991px) {
      margin-top: 0;
    }
  }
}


/* ----- FOOTER ----- */

.footer__classes-container {
  background: $color__primary;
  bottom: 0;
  color: white;
  display: inline-block;
  padding: 15px 75px;
  position: fixed;
  right: 60px;
  z-index: 999;

  a {
    color: white;
    font-size: 16px;
    letter-spacing: 1.5px;
    line-height: 20px;
    text-align: center;

    &:hover {
      color: $color__primary-dark;
      text-decoration: none;
      transition: 0.3s ease-in-out;
    }
  }

  @media (max-width: 767px) {
    position: static;
    width: 100%;
  }
}

.footer__classes {
  display: none;
  padding-top: 20px;
  padding-bottom: 20px;
  text-align: center;

  li {
    padding-bottom: 20px;

    p {
      font-size: 12px;
      padding: 0;
      margin: 0;
    }

    .btn-classes {
      background: white;
      border-radius: 0;
      color: $color__primary;
      font-size: 12px;
      margin-top: 5px;
      padding: 3px 10px;

      &:hover {
        text-decoration: none;
      }
    }
  }

  @media (max-width: 767px) {
    display: inline-block;
    width: 100%;
  }
}

.footer {
  background: $color__secondary;
  bottom: 0;
  height: 50px;
  overflow: hidden;
  position: fixed;
  width: 100%;
  z-index: 998;

  @media (max-width: 767px) {
    height: 25px;
  }

  .footer__content {
    position: fixed;
    right: 60px;
  }

  .footer__contact-container {
    display: inline-block;
    position: fixed;
    bottom: 0;
    right: 450px;

    ul {
      overflow: hidden;

      @media (max-width: 900px) {
        display: none;
      }
    }

    li {
      color: $color__primary;
      float: left;
      font-size: 12px;
      line-height: 40px;
      padding: 5px 10px;
    }
  }
}




/* ---------- CLASSES PAGE ---------- */

.nav__classes {
  left: 50px;
  position: fixed;
  text-align: right;
  top: 240px;
  width: 22%;
  width: calc(25% - 50px);

  li {
    line-height: 20px;
    padding-bottom: 10px;

    a {
      color: $color__accent;
      font-weight: $font__bold;

      &:hover {
        color: black;
        text-decoration:underline;
        text-decoration-color: $color__accent;
        transition: 0.3s ease-in-out;
      }
    }
  }

  @media (max-width: 767px) {
    display: none;
  }
}

.classes-schedule,
.classes-description {
  color: $color__gray;
  font: {
    size: 40px;
    weight: $font__bold;
  }
  letter-spacing: 4px;
  padding: 100px 0 20px 10px;

  @media (max-width: 767px) {
    text-align: center;
    font-size: 28px;
  }
}

table {
  width: 100%;

  thead {
    border-top: 1px solid $color__primary;
    border-bottom: 1px solid $color__primary;
    color: $color__primary;
    font: {
      size: 16px;
      weight: $font__bold;
    }
    padding: 10px;

    th {
      letter-spacing: 0.5px;
      line-height: 20px;
      padding: 10px 0;
    }
  }

  tbody {
    color: $color__gray;

    td {
      letter-spacing: 0.5px;
      line-height: 24px;
      padding: 5px 0;
      width: 25%;
    }
  }
}

.schedule__classes {
  padding-left: 10px;
  padding-right: 10px;
}

.description__classes {
  color: $color__gray;
  padding-left: 10px;
  padding-right: 10px;

  h3 {
    font: {
      size: 24px;
      weight: $font__bold;
    }
  }

  @media (max-width: 767px) {
    text-align: center;

    h2 {
      padding-top: 75px;
    }
  }
}




/* ---------- PRICING PAGE ---------- */

.nav__pricing {
  left: 50px;
  position: fixed;
  text-align: right;
  top: 240px;
  width: 22%;
  width: calc(25% - 50px);

  li {
    line-height: 20px;
    padding-bottom: 10px;

    a {
      color: $color__accent;
      font-weight: $font__bold;

      &:hover {
        color: black;
        text-decoration:underline;
        text-decoration-color: $color__accent;
        transition: 0.3s ease-in-out;
      }
    }
  }

  @media (max-width: 767px) {
    display: none;
  }
}

.section__pricing {

  @media (max-width: 767px) {
    padding: 25px 35px 10px 35px;
  }
}

.content__pricing {
  h1 {
    color: $color__gray;
    font: {
      size: 40px;
      weight: $font__bold;
    }
    letter-spacing: 4px;
    padding: 100px 0 20px 10px;

    @media (max-width: 767px) {
      font-size: 28px;
      padding: 50px 0 20px 10px;
    }
  }

  @media (max-width: 767px) {
    text-align: center;

    h2 {
      padding-top: 75px;
    }
  }

  p {
    color: $color__gray;
  }

  .teacher-training-link {
    &:hover {
      color: $color__brown;
      text-decoration: none;
    }
  }

  h2 {
    color: $color__primary;
  }

  h4 {
    font: {
      size: 14px;
      weight: $font__bold;
    }
    letter-spacing: 1px;
    padding-bottom: 10px;
  }
}
/* ... */

